# env-ctl

./: .gitignore  Cargo.toml  HANDOFF.md  README.md
crates/secretd/: Cargo.toml
crates/secretd/src/: audit.rs  conv.rs  grpc.rs  lib.rs  main.rs  peercred.rs
crates/secretd/tests/: e2e.rs
crates/secrets-engine/src/: keyslot.rs
crates/secrets-engine/src/broker/: token.rs
crates/secrets-engine/src/vault/: store.rs
docs/: DESIGN-NOTES.md  ROADMAP.md
docs/db/: schema.sql
workflows/: README.md  env-ctl-architecture.js  env-ctl-audit-fixes.js  env-ctl-audit-phase1.js  env-ctl-audit-servermode.js  env-ctl-ops-research.js  env-ctl-phase1-store-libsql.js  env-ctl-phase1-vaultcore.js  env-ctl-phase1b-vault.js  env-ctl-phase4-broker.js  env-ctl-phase6-daemon.js  env-ctl-research-fleet.js  env-ctl-server-mode.js  envctl-merge.js
